# spinlog

./: .gitignore  CLAUDE.md  Cargo.toml
migrations/: 0002_oauth.sql  0007_user_bio.sql  0008_ratings_favorite_track.sql
public/: style.css
scripts/: mb-search.js
src/: app.rs  auth.rs  lib.rs  main.rs  spotify.rs
src-tauri/: tauri.conf.json
tests/: favorite_track.rs  follow_list.rs  migrations.rs  profile.rs  security.rs
